# parking-reservation-chatbot

./: .gitignore  README.md  langgraph.json  main.py  pyproject.toml  pytest.ini  requirements.txt  run_graph.py
.github/workflows/: python-ci.yml
.langgraph_api/: .langgraph_ops.pckl
app/agents/: admin_agent.py  chat_orchestrator.py  reservation_agent.py
app/api/: admin_api.py
app/database/: init_db.py  seed_slots.py  sqlite_client.py
app/evaluation/: evaluator.py  rag_evaluation.py
app/graph/: graph_state.py  nodes.py  workflow.py
app/guardrails/: input_filter.py
app/mcp/: client.py  reservation_writer.py  server.py
app/models/: reservation.py
app/prompts/: reservation_prompt.py  system_prompt.py
app/rag/: document_loader.py  index_documents.py  milvus_client.py  rag_chain.py  retriever.py  text_splitter.py  vector_store.py
app/ui_app/: admin_components.py  admin_dashboard.py  components.py  streamlit_app.py  streamlit_app_working.py  user_mode.py
app/utils/: azure_embeddings.py  (+5 more)
database/: parking.db
misc_scripts/: admin_console.py  admin_test.py  chat_orchestrator_workling.py  generate_ppt.py  main_backup.py  main_test_run.py  milvus_test_run.py  requirements_current.txt  reservation_agent_working_backup.py  test_dns.py  test_email.py  test_email_ssl.py
tests/: conftest.py  rag_evaluation.py  test_admin_agent.py  test_chat_orchestrator.py  test_email_service.py  test_fastAPI_mcp_server.py  test_guardrails.py  test_langgraph_workflow.py  test_load.py  test_reservation_agent.py  test_retriever.py  test_sqlite_client.py  test_streamlit_ui.py
(+11 files in other folders)
