[project]
name = "smartpark-ai"
version = "1.0.0"
description = "AI-powered Parking Reservation Chatbot using LangGraph, LangChain, Azure OpenAI and MCP"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Rishabh Gupta" }
]

dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]